--- a/instance/templates/login.html
+++ b/instance/templates/login.html
@@ -6,23 +6,39 @@
     <title>Login</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+
   </head>
   <body>
-    <h1>Login Page</h1>
-    <form method="POST" action="">
-      {{ form.hidden_tag() }}
-      <label for="form.username">Username</label></br>
-      <p>{{ form.username }}</p>
-      <label for="form.password">Password</label></br>
-      <p>{{ form.password }}</p>
-      <p>{{ form.submit }}</p>
-      
-      
-      
-
-
-    <a href ="{{url_for('main.register')}}">Don't have an account? Sign Up</a><br>
+    <div class="wrapper">
+      <video autoplay loop muted plays-inline class="background-clip">
+        <source src="{{url_for('static', filename='farm.mp4')}}" type="video/mp4">
+      </video>
+        <div class="login_box">
+            <div class="login-header">
+                <span>Login</span>
+            </div>
+            <form method="POST" action="">
+                {{ form.hidden_tag() }}
+                <div class="input_box">
+                    {{ form.username }}
+                    <label for="form_username">Username</label>
+                    <i class="fa-regular fa-user"></i>
+                </div>
+                <div class="input_box">
+                    {{ form.password }}
+                    <label for="form_password">Password</label>
+                    <i class="fa-solid fa-lock"></i>
+                </div>
+                <div class="input_box">
+                    {{ form.submit }}
+                </div>
+            </form>
+            <a href="{{ url_for('main.register') }}">Don't have an account? Sign Up</a>
+        </div>
+        
+    </div>
    
   </body>
 </html>
