--- a/instance/templates/register.html
+++ b/instance/templates/register.html
@@ -6,48 +6,104 @@
     <title>Register</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
-    <h1>Register Page</h1>
-    <form method="POST">
-      {{ form.hidden_tag() }}
-      <div>
-        <p>
-          {{ form.first_name.label }}<br />
-          {{ form.first_name(size=32) }}<br />
-        </p>
-        <p>
-          {{ form.last_name.label }}<br />
-          {{ form.last_name(size=32) }}<br />
-        </p>
-        <p>
-          {{ form.username.label }}<br />
-          {{ form.username(size=32) }}<br />
-        </p>
-        <p>
-          {{ form.email.label }}<br />
-          {{ form.email(size=32) }}<br />
-        </p>
-        <p>
-          {{ form.password.label }}<br />
-          {{ form.password(size=32) }}<br />
-        </p>
-        <p>
-          {{ form.confirm_password.label }}<br />
-          {{ form.confirm_password(size=32) }}<br />
-        </p>
-        {% if form.first_name.errors %}
-        <ul>
-          {% for error in form.first_name.errors %}
-          <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
-        {% endif %}
+    <div class="wrapper">
+      <video autoplay loop muted plays-inline class="background-clip">
+        <source src="{{url_for('static', filename='farm.mp4')}}" type="video/mp4">
+      </video>
+      <div class="register_box">
+        <div class="register-header">
+          <span>Register</span>
+        </div>
+        <form method="POST">
+          {{ form.hidden_tag() }}
+          <div class="input_box">
+            {{ form.first_name }}
+            <label for="form_first_name">First Name</label>
+            <i class="fa-regular fa-user"></i>
+            {% if form.first_name.errors %}
+            <ul>
+              {% for error in form.first_name.errors %}
+              <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+          <div class="input_box">
+            {{ form.last_name }}
+            <label for="form_last_name">Last Name</label>
+            <i class="fa-regular fa-user"></i>
+            {% if form.last_name.errors %}
+            <ul>
+              {% for error in form.last_name.errors %}
+              <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+          <div class="input_box">
+            {{ form.username }}
+            <label for="form_username">Username</label>
+            <i class="fa-regular fa-user"></i>
+            {% if form.username.errors %}
+            <ul>
+              {% for error in form.username.errors %}
+              <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+          <div class="input_box">
+            {{ form.email }}
+            <label for="form_email">Email</label>
+            <i class="fa-regular fa-envelope"></i>
+            {% if form.email.errors %}
+            <ul>
+              {% for error in form.email.errors %}
+              <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+          <div class="input_box">
+            {{ form.password }}
+            <label for="form_password">Password</label>
+            <i class="fa-solid fa-lock"></i>
+            {% if form.password.errors %}
+            <ul>
+              {% for error in form.password.errors %}
+              <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+          <div class="input_box">
+            {{ form.confirm_password }}
+            <label for="form_confirm_password">Confirm Password</label>
+            <i class="fa-solid fa-lock"></i>
+            {% if form.confirm_password.errors %}
+            <ul>
+              {% for error in form.confirm_password.errors %}
+              <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+          <div class="input_box">{{ form.submit }}</div>
+        </form>
+        <a href="{{ url_for('main.login') }}">Already have an account? Login</a>
       </div>
-      <p>{{ form.submit() }}</p>
-    </form>
-    <a href="{{url_for('main.login')}}">Already have an account? Login in</a
-    ><br />
+      
+    </div>
+    
   </body>
 </html>
