--- a/instance/templates/login.html
+++ b/instance/templates/login.html
@@ -23,12 +23,12 @@
                 {{ form.hidden_tag() }}
                 <div class="input_box">
                     {{ form.username }}
-                    <label for="form_username">Username</label>
+                    <label for="form_username" class="label">Username</label>
                     <i class="fa-regular fa-user"></i>
                 </div>
                 <div class="input_box">
                     {{ form.password }}
-                    <label for="form_password">Password</label>
+                    <label for="form_password" class="label">Password</label>
                     <i class="fa-solid fa-lock"></i>
                 </div>
                 <div class="input_box">
