--- a/instance/static/style.css
+++ b/instance/static/style.css
@@ -30,20 +30,19 @@ text-decoration: underline;
   min-height: 100vh;
 
 }
-.login_box, .register_box {
+.login_box , .register_box{
   position: relative;
   width:450px;
   color:var(--secondary-color);
   backdrop-filter: blur(25px);
   border:2px solid var(--primary-color);
   border-radius: 15px;
-  padding: 7.5em 2.5em 4em 2.5em;
+  padding: 5.5em 2.5em 4em 2.5em;
   box-shadow: 0px 0px 10px 2px #00000033;
   margin-bottom: 100px;
-  margin-top: 20px;
-
-
+  margin-top: 10px;
 }
+ 
 .login-header,.register-header {
   width: 140px;
   height: 70px;
@@ -91,7 +90,7 @@ text-decoration: underline;
   position:relative;
   display: flex;
   flex-direction: column;
-  margin:20px 0;
+  margin:0px 0;
 
 }
 
@@ -118,8 +117,8 @@ margin-bottom: 10px;
   transition:0.2s;
 }
 
-.form-input:focus ~ .input-box label,
-.form-input:valid ~ .input-box label{
+.form-input:focus ~ .label,
+.form-input:valid ~ .label{
   background-color: var(--primary-color);
   color:var(--black-color);
   position:absolute;
