--- a/instance/static/style.css
+++ b/instance/static/style.css
@@ -41,6 +41,7 @@ text-decoration: underline;
   box-shadow: 0px 0px 10px 2px #00000033;
   margin-bottom: 100px;
   margin-top: 10px;
+  z-index: 1;
 }
  
 .login-header,.register-header {
@@ -151,9 +152,12 @@ i{
 
 }
 .background-clip{
-  position:absolute;
+  position:fixed;
   right:0;
   bottom: 0;
+  height:100%;
+  width: 100%;
+  overflow:hidden;
   z-index: -1;
 }
 
