--- a/instance/static/dash.css
+++ b/instance/static/dash.css
@@ -1,45 +1,42 @@
-body {
-  background: #BCBBB8;
+/* --------css for the background video */
+.background-clip {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  z-index: -1;
 }
 
-h1 {
-  color: mediumseagreen;
-  text-align: center;
+@media (min-aspect-ratio: 16/9) {
+  .background-clip {
+    width: 100%;
+    height: auto;
+  }
 }
 
-.navbar-text {
-  color: white;
-  font-size: 1.5em;
+@media (max-aspect-ratio: 16/9) {
+  .background-clip {
+    width: auto;
+    height: 100%;
+  }
 }
 
-.nav-link {
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+  padding-top: 0 !important; 
+  padding-bottom: 0 !important;  
   color: white !important;
-  font-size: 1.5em;
 }
-
-.warning {
-  color: red;
-  font-weight: bold;
-  text-align: center;
-}
-
-.blur-container {
-  background: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(10px);
-  padding: 20px;
-  border-radius: 15px;
-  margin: 20px 0;
-}
-
-.card {
-  color: white;
-}
-
-.main-container {
-  padding: 20px;
-}
-
-h2 {
-  text-align: center;
-  color: mediumseagreen;
+ 
+.navbar-brand, .navbar-nav ,.nav-link ,.navbar-text {
+  padding-top: 0.25rem !important;  
+  padding-bottom: 0.25rem !important;  
+  font-size: 1.5rem;  
+  color: white !important;
 }
