--- a/instance/templates/dashboard.html
+++ b/instance/templates/dashboard.html
@@ -124,6 +124,30 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
+					<div
+					class="collapse navbar-collapse justify-content-end"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url_for('main.crops') }}"
+								>About Crops</a
+							>
+						</li>
+					</ul>
+				</div>
+					<div
+					class="collapse navbar-collapse justify-content-end"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url_for('main.logout') }}"
+								>About Us</a
+							>
+						</li>
+					</ul>
+				</div>
           <div
             class="collapse navbar-collapse justify-content-end"
             id="navbarSupportedContent"
