--- a/instance/templates/dashboard.html
+++ b/instance/templates/dashboard.html
@@ -14,6 +14,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+		<script src="{{ url_for('static', filename='weather.js') }}"></script>
     <style>
       h1 {
         color: mediumseagreen;
@@ -87,16 +88,7 @@
         font-size: 20px;
       }
 
-      .navbar {
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-      }
-
-      .navbar-brand, .navbar-nav .nav-link {
-        padding-top: 0.25rem;
-        padding-bottom: 0.25rem;
-        font-size: 1rem;
-      }
+    
     </style>
   </head>
 
@@ -142,7 +134,7 @@
 				>
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="{{ url_for('main.logout') }}"
+							<a class="nav-link" href="{{ url_for('main.about') }}"
 								>About Us</a
 							>
 						</li>
