--- a/instance/static/dash.css
+++ b/instance/static/dash.css
@@ -40,3 +40,28 @@
   font-size: 1.5rem;  
   color: white !important;
 }
+
+/* css for the weather widget */
+.top, .middle{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+.bottom{
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 2em;
+  padding-left: 10px;
+  padding-right: 10px;
+  backdrop-filter: blur(25px);
+  
+}
+.bottom p{
+  margin: 10px;
+
+}
+.temp{
+  font-size: 50px;
+  margin-top: 20px;
+}
