date section fixed

--- a/instance/templates/dashboard.html
+++ b/instance/templates/dashboard.html
@@ -263,7 +263,7 @@
         <div class="weather-container">
           <div class = "top">
             <p class ="location">Ghana-Kumasi</p>
-            <p class ="date"> Monday,12 Feb</p>
+            <p class ="date"></p>
           </div>
           <div class = "middle">
             <div class ="img-container">
