requirement text added

--- a/instance/templates/dashboard.html
+++ b/instance/templates/dashboard.html
@@ -262,7 +262,7 @@
         <!-- Weather Container -->
         <div class="weather-container">
           <div class = "top">
-            <p class ="location">Ghana-Kumasi</p>
+            <p class ="location"></p>
             <p class ="date"></p>
           </div>
           <div class = "middle">
@@ -270,16 +270,16 @@
               <img src="" alt="" class ="weather-img" width="150px">
             </div>
             <div class = info-container>
-              <p class="temp">12 <sup>°C</sup>
+              <p class="temp"><sup></sup>
               </p>
               <p class="weather-state">Rain shower</p>
             </div>
 
           </div>
           <div class = "bottom">
-            <p >Wind <br> <span class="wind">45</span></p>
-            <p>Pressure <br> <span class="pressure">45</span></p>
-            <p>Humidity <br> <span class="humidity">45</span></p>
+            <p >Wind <br> <span class="wind"></span></p>
+            <p>Pressure <br> <span class="pressure"></span></p>
+            <p>Humidity <br> <span class="humidity"></span></p>
           </div>
         </div>
 
