--- a/instance/templates/crops.html
+++ b/instance/templates/crops.html
@@ -212,7 +212,7 @@
     <img class="card__img" src="https://cdn.glitch.global/bbb619d3-610c-4355-a0a1-1dffb2a7b752/priscilla-du-preez-CoqJGsFVJtM-unsplash.jpg?v=1714727428177" alt="Image 4">
     <div class="card__content">
         <h2 class="card__title">Apple</h2>
-        <p class="card__description">The apple is a temperate fruit crop. However, in India the apple growing areas do not fall in temperate zone but the prevailing temperate climate of the region is due to the Himalayan ranges and high altitudes. The average summer temperature should be around 21-24oC during active growth period.</p>
+        <p class="card__description">Apple cultivation in Ghana presents unique challenges and opportunities due to its tropical climate. Unlike India, where apple growing regions benefit from temperate conditions provided by the Himalayan ranges and high altitudes, Ghana's climate is predominantly tropical.</p>
     </div>
 </div>
 <!-- Card 9 -->
@@ -236,7 +236,7 @@
     <img class="card__img" src="https://cdn.glitch.global/bbb619d3-610c-4355-a0a1-1dffb2a7b752/maja-petric-vGQ49l9I4EE-unsplash.jpg?v=1714727723944" alt="Image 4">
     <div class="card__content">
         <h2 class="card__title">Grape</h2>
-        <p class="card__description">Grape (Vitis sp.) belonging to Family Vitaceae is a commercially important fruit crop of India. It is a temperate crop which has got adapted to sub-tropical climate of peninsular India.</p>
+        <p class="card__description">Grapes (Vitis sp.), belonging to the family Vitaceae, are a popular and commercially significant fruit crop grown worldwide. They are valued for their versatility and are used in a variety of products, including fresh fruit, raisins, wine, and grape juice.</p>
     </div>
 </div>
 <!-- Card 12 -->
@@ -244,7 +244,7 @@
     <img class="card__img" src="https://cdn.glitch.global/bbb619d3-610c-4355-a0a1-1dffb2a7b752/hotchicksing-Dyc95dKuGp4-unsplash.jpg?v=1714727788951" alt="Image 4">
     <div class="card__content">
         <h2 class="card__title">Mango</h2>
-        <p class="card__description">A mango is an edible stone fruit produced by the tropical tree Mangifera indica. It originated from the region between northwestern Myanmar, Bangladesh, and northeastern India.[1][2] M. indica has been cultivated in South and Southeast Asia since ancient times resulting in two types of modern mango cultivars: the "Indian type" and the "Southeast Asian type".</p>
+        <p class="card__description">Mangoes (Mangifera indica), belonging to the family Anacardiaceae, are a significant fruit crop in Ghana. Known for their sweet flavor and nutritional benefits, mangoes are widely consumed and cultivated across the country. Mangoes thrive in tropical and subtropical climates, making Ghana's climate ideal for their cultivation.</p>
     </div>
 </div>
 <!-- Card 13 -->
@@ -284,7 +284,7 @@
     <img class="card__img" src="https://cdn.glitch.global/bbb619d3-610c-4355-a0a1-1dffb2a7b752/david-gabrielyan-ecpymDlXwHE-unsplash.jpg?v=1714728571872" alt="Image 4">
     <div class="card__content">
         <h2 class="card__title">Mungbean</h2>
-        <p class="card__description">mung bean, (Vigna radiata), legume plant of the pea family (Fabaceae), grown for its edible seeds and young sprouts. The mung bean is likely native to the Indian subcontinent and is widely cultivated in Asia for use in a variety of sweet and savory dishes, particularly in India, China, Korea, and Thailand</p>
+        <p class="card__description">Mung bean (Vigna radiata) is a legume plant of the pea family (Fabaceae), known for its edible seeds and young sprouts. Originally native to the Indian subcontinent, the mung bean is widely cultivated in Asia and is increasingly recognized in Ghana for its versatility and nutritional value. They require a warm growing season with well-distributed rainfall or supplementary irrigation.</p>
     </div>
 </div>
 <!-- Card 18 -->
@@ -292,7 +292,7 @@
     <img class="card__img" src="https://www.greendna.in/cdn/shop/products/moth2_1024x1024@2x.jpg?v=1591178564" alt="Image 4">
     <div class="card__content">
         <h2 class="card__title">Mothbeans</h2>
-        <p class="card__description">The moth bean crop consists of pods, sprouts and protein rich seeds are mainly consumed in India. It acts as a pasture legume. It is rich in iron, calcium, manganese, zinc, potassium, magnesium and vitamin B9. The seeds of this crop contain 22-24% of protein.</p>
+        <p class="card__description">The moth bean crop consists of pods, sprouts and protein rich seeds. It acts as a pasture legume. It is rich in iron, calcium, manganese, zinc, potassium, magnesium and vitamin B9. The seeds of this crop contain 22-24% of protein.</p>
     </div>
 </div>
 <!-- Card 19 -->
@@ -300,7 +300,7 @@
     <img class="card_img" src="https://th.bing.com/th/id/OIP.7b-m7ihD5VtUCQ5LXfIR5wHaEK?rs=1&pid=ImgDetMain" alt="Image 4">
     <div class="card__content">
         <h2 class="card__title">Pigeonpeas</h2>
-        <p class="card__description">Pigeonpea (Cajanus cajan (L.) Millsp.), commonly known as red gram or tur or Arhar, is a very old crop of this country. After gram, arhar is the second most important pulse crop in the country. It is mainly eaten in the form of split pulse as 'dal'.</p>
+        <p class="card__description">Pigeonpea (Cajanus cajan), commonly known as red gram, tur, or arhar, is an important pulse crop in Ghana. Although not as widely cultivated as some other crops, pigeonpea plays a significant role in Ghanaian agriculture. Pigeonpea is a traditional pulse crop with a long history of cultivation. It is valued for its adaptability and versatility in various cropping systems.</p>
     </div>
 </div>
 <!-- Card 20 -->
@@ -316,7 +316,7 @@
     <img class="card__img" src="https://cdn.glitch.global/bbb619d3-610c-4355-a0a1-1dffb2a7b752/engin-akyurt-XySiMsjrdxE-unsplash.jpg?v=1714729045811" alt="Image 4">
     <div class="card__content">
         <h2 class="card__title">Chickpea</h2>
-        <p class="card__description">Gram commonly known as 'chick pea' or Bengal gram is the most important pulse crop in India. Chick pea occupies about 38 per cent of area under pulses and contributes about 50 per cent of the total pulse production of India. It is used for human consumption as well as for feeding to animals.</p>
+        <p class="card__description">Chickpeas, also known as "gram" or "Bengal gram" (Cicer arietinum), are gaining importance as a pulse crop in Ghana. Although not traditionally as dominant as other staples, chickpeas are valued for their nutritional benefits and versatility.Chickpeas prefer well-drained, loamy soils with good organic content.</p>
     </div>
 </div>
     </div>
