--- a/instance/templates/login.html
+++ b/instance/templates/login.html
@@ -5,37 +5,212 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
 </head>
+<style>
+    body {
+        height: 100vh;
+        margin: 0;
+        height: 100%;
+        width: 100vw;
+        overflow-x: hidden;
+        font-size: 1.5em;
+        background-color: whitesmoke;
+        font-family: "Raleway", sans-serif;
+    }
+    .login-section {
+        display: flex;
+        place-items: center;
+        height: 100vh;
+    }
+    .login-section>* {
+        width: 50%;
+    }
+    #submit:hover {
+        border-color: #646cff;
+    }
+    a {
+        font-weight: 500;
+        text-decoration: inherit;
+    }
+    .login-div {
+        display: grid;
+        justify-content: center;
+    }
+    .login-div>div {
+        padding: 40px 35px;
+        display: grid;
+        gap: 35px;
+        border-radius: 8px;
+        background-color: whitesmoke;
+        animation: framer-appear 1s ease-in-out;
+    }
+    .login-div form {
+        display: grid;
+        gap: 10px;
+    }
+    .login-div div>p {
+        font-size: 1.35rem;
+        font-weight: bold;
+        text-align: center;
+        margin: 0 0 20px 0;
+        color: #151C24;
+        font-family: "Manrope", sans-serif;
+    }
+    input {
+        border: 2px solid #DEE2E5;
+        background-color: transparent;
+        font-family: inherit;
+        height: 40px;
+        outline: none;
+        border-radius: 7px;
+        padding-left: 10px;
+        padding-right: 10px;
+        caret-color: forestgreen;
+    }
+    input:focus {
+        border-color: #B35042;
+    }
+    .login-div #submit {
+        width: 350px;
+        background-color: #008457;
+        border-radius: 8px;
+        border: 1px solid transparent;
+        padding: 0.6em 1.2em;
+        font-size: 0.8em;
+        font-weight: 500;
+        font-family: inherit;
+        color: white;
+        cursor: pointer;
+        height: 50px;
+        transition: border-color 0.25s;
+    }
+    #submit:focus, #submit:focus-visible {
+        outline: 4px auto -webkit-focus-ring-color;
+    }
+    .login-div form>a {
+        font-size: 0.9rem;
+        color: #B35042;
+        margin-top: 2vh;
+    }
+    .create-link {
+        font-size: 0.85rem;
+    }
+    .create-link a {
+        margin-left: 5px;
+        font-size: 0.9rem;
+        color: #0078D4;
+    }
+    .login-div form>label {
+        display: grid;
+        gap: 8px;
+        font-size: 0.9rem;
+        color: #344556;
+    }
+    .login-div label>input {
+        font-size: 1rem;
+    }
+    .name {
+        display: flex;
+        place-items: center;
+        gap: 15px;
+        font-size: 1.8rem;
+        font-weight: bold;
+        place-self: center;
+        color: #FFF3E1;
+    }
+    .image-svg {
+        display: block;
+        text-align: center;
+    }
+    .image-svg img {
+        width: 80%;
+        animation: image-appear2 1.3s ease;
+    }
+    .design {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 50vw;
+        background-color: #008457;
+        z-index: -100;
+        height: 100vh;
+    }
+    .flash-messages{
+        position: fixed;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+        background-color: red;
+        border-radius: 7px;
+        font-size: 1.1rem;
+        padding: 10px 20px;
+        font-family: monospace;
+        animation: appear 0.5s ease;
+    }
+    @media screen and (max-width:700px) {
+        .name {
+            font-size: 1.6rem;
+        }
+        .name svg {
+            width: 40px;
+            height: 40px;
+        }
+        .login-div main>p {
+            font-size: 1.2rem;
+        }
+    }
+    @keyframes framer-appear {
+        from {
+            opacity: 0.6;
+            transform: translate(3px, 20px);
+        }
+    }
+    @keyframes image-appear2 {
+        0% {
+            opacity: 0;
+        }
+        20% {
+            opacity: 0;
+            transform: translate(3px, 20px);
+        }
+    }
+    @keyframes appear {
+        from{
+            opacity: 0.6;
+            top: -100%;
+        }
+    }
+</style>
 <body>
-    <div class="wrapper">
-        <video autoplay loop muted plays-inline class="background-clip">
-            <source src="{{ url_for('static', filename='farm.mp4') }}" type="video/mp4">
-        </video>
-        <div class="login_box">
-            <div class="login-header">
-                <span>Login</span>
-            </div>
-            <!-- Flash messages -->
-            {% with messages = get_flashed_messages(with_categories=True) %}
-                {% if messages %}
-                    <div class="flash-messages">
-                        {% for category, message in messages %}
-                            <div class="flash-message {{ category }}">
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                    </div>
-                {% endif %}
-            {% endwith %}
-            <form method="POST" action="">
-                {{ form.hidden_tag() }}
-                <div class="input_box">
-                    {{ form.username }}
-                    <label for="form_username" class="label">Username</label>
-                    <i class="fa-regular fa-user"></i>
+    {% with messages = get_flashed_messages(with_categories=True) %}
+                    {% if messages %}
+                        <div class="flash-messages">
+                            {% for category, message in messages %}
+                                <div class="flash-message {{ category }}">
+                                    {{ message }}
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endwith %}
+    <div class="design"></div>
+    <section class="login-section">
+        <div class="login-div">
+            <div>
+                <p>Sign In with your Account</p>
+
+                <!-- Flash messages -->
+                
+
+                <form method="POST" action="">
+                    {{ form.hidden_tag() }}
+                    <label>Username {{ form.username }}</label>
                     {% if form.username.errors %}
                     <ul>
                         {% for error in form.username.errors %}
@@ -43,11 +218,7 @@
                         {% endfor %}
                     </ul>
                     {% endif %}
-                </div>
-                <div class="input_box">
-                    {{ form.password }}
-                    <label for="form_password" class="label">Password</label>
-                    <i class="fa-solid fa-lock"></i>
+                    <label>Password {{ form.password }}</label>
                     {% if form.password.errors %}
                     <ul>
                         {% for error in form.password.errors %}
@@ -55,13 +226,17 @@
                         {% endfor %}
                     </ul>
                     {% endif %}
-                </div>
-                <div class="input_box">
+                    <a href="#">Forgot password?</a>
                     {{ form.submit }}
+                </form>
+                <div class="create-link">
+                    I do not have an account? <a href="{{ url_for('main.register') }}">Create new</a>
                 </div>
-            </form>
-            <a href="{{ url_for('main.register') }}">Don't have an account? Sign Up</a>
+            </div>
         </div>
-    </div>
+        <div class="image-svg">
+            <img src="{{ url_for('static', filename='rice field-pana.svg') }}" alt="">
+        </div>
+    </section>
 </body>
 </html>
